vipul final commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/sow-logo-yellow.jpg" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/sow-logo-yellow.jpg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -34,11 +34,21 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto fs-1">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/sow-logo-yellow.jpg" alt="" class=""> -->
-        <img src="assets/img/logo-sow.png" alt="" style="">
-        <!--<h1 class="sitename">Scaffold</h1>-->
+      <div class="logo d-flex align-items-center me-auto fs-1">
+        <a href="index.html" >
+          <!-- Uncomment the line below if you also wish to use an image logo -->
+          <!-- <img src="assets/img/sow-logo-yellow.jpg" alt="" class=""> -->
+          <img src="assets/img/logo-sow.png" class="sow-logo" alt="" >
+          
+          <!--<h1 class="sitename">Scaffold</h1>-->
+        </a>
+        <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" >
+          <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="main-logo">
+        </a>
+      </div>
+
+      <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" class="null-space "></a>
+        <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="second-logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -53,18 +63,11 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <!--<div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      </div>-->
 
     </div>
   </header>
 
   <main class="main">
-
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
@@ -858,10 +861,10 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://x.com/SocialWing_RAIT"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/sowrait"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/sowrait/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/socialwing-rait/"><i class="bi bi-linkedin"></i></a>
         </div>
 
       </div>
