--- a/service-details.html
+++ b/service-details.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - Scaffold Bootstrap Template</title>
+  <title>Our Events</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/sow-logo-yellow.jpg" rel="icon">
+  <link href="assets/img/sow-logo-yellow.jpg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -41,10 +41,21 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Scaffold</h1>
+      <div class="logo d-flex align-items-center me-auto fs-1">
+        <a href="index.html" >
+          <!-- Uncomment the line below if you also wish to use an image logo -->
+          <!-- <img src="assets/img/sow-logo-yellow.jpg" alt="" class=""> -->
+          <img src="assets/img/logo-sow.png" class="sow-logo" alt="" >
+          
+          <!--<h1 class="sitename">Scaffold</h1>-->
+        </a>
+        <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" >
+          <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="main-logo">
+        </a>
+      </div>
+
+      <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" class="null-space "></a>
+        <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="second-logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -54,7 +65,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#"><span>Dropdown</span><i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -76,12 +87,6 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      </div>
 
     </div>
   </header>
@@ -94,14 +99,14 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Service Details</li>
+            <li class="current">Events</li>
           </ol>
         </nav>
-        <h1>Service Details</h1>
+        <h1>Events</h1>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Service Details Section -->
+    <!-- Events Section -->
     <section id="service-details" class="service-details section">
 
       <div class="container">
@@ -111,13 +116,12 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 
             <div class="service-box">
-              <h4>Serices List</h4>
+              <h4>Events</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Product Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Graphic Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Marketing</span></a>
+                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>UDAAN</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Drop of hope</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Tree plantation</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Joyfest</span></a>
               </div>
             </div><!-- End Services List -->
 
@@ -161,7 +165,7 @@
 
       </div>
 
-    </section><!-- /Service Details Section -->
+    </section><!-- /Events Section -->
 
   </main>
 
