--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Events</a></li>
-          <li><a href="#portfolio">Gallery</a></li>
+          <li><a href="/Gallery.html">Gallery</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -95,7 +95,7 @@
         <div class="row gx-0">
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/BLOOD_DONATION/Copy of IMG_8438.JPG" class="img-fluid" alt="">
+            <img src="assets/img/about.jpeg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
@@ -169,9 +169,9 @@
                  Udaan is chairtable event where we help the underprivileged children to get the education they deserve.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Udaan" is a fundraising marathon organised by Social Wing-RAIT and NSS-RAIT.This The funds go to underprivileged children's education. This marathon is usually organised at the end of winter, fresh for a new start.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>100 volunteers came together to make this marathon a beaming success with more than 6000 participants. </span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>This event not only ensured awareness of importance of education but also sportsmanship.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -188,10 +188,10 @@
                   Drop of hope is an event where we collect blood from the donors and donate it to the needy.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>In the light of Founder’s Day of our college, we, the members of Social Wing-RAIT and NSS-RAIT, organise a blood donation camp called “Drop of Hope”. The medical practitioners and students of medicine from the DY Patil Hospital provide us with their invaluable support for this community welfare activity.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>A total of 55 NSS volunteers, along with students and faculty, actively participated in the blood donation drive.Over 140 participants contributed to the event and
+                    we successfully collected 101 bottles of blood to aid those in need. </span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>In addition to our college students and faculty, community members also contributed to this important service initiative.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -208,9 +208,9 @@
                   Tree Plantation is an event where we plant trees and take care of them.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>The members of Social Wing-RAIT and NSS-RAIT,together, organised an event called "VRUक्षAK".Students were given the gardening tools and were allowed to choose the area they would plant the sapling in.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Around 160 volunteers and members,together, were involved in this activity.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>It was an initiative to bring all together and celebrate the fruits and beauty of nature</span></li>
                 </ul>
                 <p class="fst-italic">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -231,9 +231,9 @@
                   Joyfest is an event where we celebrate the joy of giving to underprivileged children.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>JoyFest, an event organised on28th of March,2024,by NSS-RAIT and Social Wing Committee was a heartwarming event where underprivileged children from a NGO, joined our college's techfest. They were divided into nine groups, each led by an NSS volunteers.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>A total of 40 NSS volunteers joined their hands together for this event and around 50 children from the NGO visited our college.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span> From challenging technical games to exciting VR experiences, there was something for everyone. The children's faces lit up with delight as they immersed themselves in the festivities.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
