--- a/Gallery.html
+++ b/Gallery.html
@@ -38,34 +38,39 @@
 
 <body class="starter-page-page">
 
+
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Scaffold</h1>
+      <div class="logo d-flex align-items-center me-auto fs-1">
+        <a href="index.html" >
+          <!-- Uncomment the line below if you also wish to use an image logo -->
+          <!-- <img src="assets/img/sow-logo-yellow.jpg" alt="" class=""> -->
+          <img src="assets/img/logo-sow.png" class="sow-logo" alt="" >
+          
+          <!--<h1 class="sitename">Scaffold</h1>-->
+        </a>
+        <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" >
+          <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="main-logo">
+        </a>
+      </div>
+
+      <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" class="null-space "></a>
+        <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="second-logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero">Home</a></li>
+          <li><a href="/index.html" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Events</a></li>
-          <li><a href="#portfolio">Gallery</a></li>
+          <li><a href="/Gallery.html">Gallery</a></li>
           <li><a href="#team">Team</a></li>
-        
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      </div>
 
     </div>
   </header>
@@ -319,14 +324,14 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div>
-            © Copyright <strong><span>MyWebsite</span></strong>. All Rights Reserved
+            © Copyright <strong><span>Social Wing</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed and Developed by <a href="https://agavi.co.in/">Agavi Technologies</a>
           </div>
         </div>
 
