--- a/Gallery.html
+++ b/Gallery.html
@@ -254,6 +254,7 @@
 
   </main>
 
+
   <footer id="footer" class="footer light-background">
 
     <div class="footer-top">
@@ -261,12 +262,13 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">Scaffold</span>
+              <img src="assets/img/logo-sow.png" alt="logo-sow">
+              <span class="sitename">Social Wing</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+              <p>RAIT Nerul</p>
+              <p>Maharastra, 400614</p>
+              <p class="mt-3"><strong>Phone:</strong> <span>+91 5589 55488 55</span></p>
               <p><strong>Email:</strong> <span>info@example.com</span></p>
             </div>
           </div>
@@ -283,17 +285,16 @@
           </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
+            <h4>Our Events</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="#">UDAAN</a></li>
+              <li><a href="#">Drop of Hope</a></li>
+              <li><a href="#">Tree Plantation</a></li>
+              <li><a href="#">Joyfest</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
+          <!--<div class="col-lg-2 col-md-3 footer-links">
             <h4>Hic solutasetp</h4>
             <ul>
               <li><a href="#">Molestiae accusamus iure</a></li>
@@ -313,7 +314,7 @@
               <li><a href="#">Trodelas</a></li>
               <li><a href="#">Flexo</a></li>
             </ul>
-          </div>
+          </div>-->
 
         </div>
       </div>
@@ -331,21 +332,22 @@
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed and Developed by <a href="https://agavi.co.in/">Agavi Technologies</a>
+            Designed and Developed at <a href="https://agavi.co.in/">Agavi Technologies.</a>
           </div>
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://x.com/SocialWing_RAIT"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/sowrait"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/sowrait/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/socialwing-rait/"><i class="bi bi-linkedin"></i></a>
         </div>
 
       </div>
     </div>
 
   </footer>
+
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
