change of icon to yellow-logo

--- a/Gallery.html
+++ b/Gallery.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - Scaffold Bootstrap Template</title>
+  <title>Gallery</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/sow-logo-yellow.jpg" rel="icon">
+  <link href="assets/img/sow-logo-yellow.jpg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -43,16 +43,18 @@
     <div class="container position-relative d-flex align-items-center">
 
       <div class="logo d-flex align-items-center me-auto fs-1">
+
+        <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" ></a>
+          <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="main-logo">
+        </a>
         <a href="index.html" >
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/sow-logo-yellow.jpg" alt="" class=""> -->
-          <img src="assets/img/logo-sow.png" class="sow-logo" alt="" >
+          <img src="assets/img/sow-logo-yellow.jpg" class="sow-logo" alt="" >
           
           <!--<h1 class="sitename">Scaffold</h1>-->
         </a>
-        <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" >
-          <img src="assets/img/clg-logo.png" class="clg-logo" alt="" id="main-logo">
-        </a>
+        
       </div>
 
       <a href="https://dypatil.edu/schools/ramrao-adik-institute-of-technology" class="null-space "></a>
