--- a/index.html
+++ b/index.html
@@ -214,10 +214,7 @@
                   <li><i class="bi bi-check2-all"></i> <span>Around 160 volunteers and members,together, were involved in this activity.</span></li>
                   <li><i class="bi bi-check2-all"></i> <span>It was an initiative to bring all together and celebrate the fruits and beauty of nature</span></li>
                 </ul>
-                <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
-                </p>
+           
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
                 <img src="assets\img\TREE_PLANTATION\im3.JPG" alt="" class="img-fluid">
@@ -431,9 +428,9 @@
 
         <div class="row gy-5">
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/cores/ath.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Atharva mane</h4>
                 <span>President</span>
@@ -447,9 +444,9 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/cores/raj.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Raj Pawar</h4>
                 <span>Vice President</span>
@@ -463,9 +460,9 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/cores/ish.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Ishwari Mundake 
                 </h4>
@@ -480,9 +477,9 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/cores/rajan.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Rajan Shirsath 
                 </h4>
@@ -492,6 +489,40 @@
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href="https://www.instagram.com/rajan_shirsath?igsh=MTJyZmd1bmxkYzllMw=="><i class="bi bi-instagram"></i></a>
                   <a href="https://www.linkedin.com/in/rajan-shirsath-2a1738273/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="member">
+              <div class="pic"><img src="assets/img/cores/shr.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Shrusti Rane 
+                </h4>
+                <span>Chief NSS Executive</span>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/shrushtixrane?igsh=MTdkaHBjdDdoMDdpeQ=="><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/shrushti-rane-980a842ab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="member">
+              <div class="pic"><img src="assets/img/cores/pra.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Pratham Shetty 
+                </h4>
+                <span>Administrator</span>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/pratham_shettyyy?igsh=ZHpzOGdvZXVjcjB3"><i class="bi bi-instagram"></i></a>
+                  <a href="www.linkedin.com/in/pratham-shetty-60a950225"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
